--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,5 +3,8 @@
     "axios": "^1.7.9",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
+  },
+  "scripts": {
+    "start": "node src/index.js"
   }
 }
